--- a/index.html
+++ b/index.html
@@ -1,3 +1,73 @@
-<html>
-     
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>NYC Zine: Street art</title>
+<link rel="stylesheet" href="css/normalize.css">
+<link rel="stylesheet" href="css/typography.css">
+<link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <header class="site-header">
+    <h1>NYC Zine</h1>
+    <nav role="navigation">
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="subways.html">subways</a></li>
+              <li><a href="parks.html">parks</a></li>
+              <li><a href="about.html">about</a></li>
+            </ul>
+    </nav>
+  </header>
+
+<main role="main">
+   <article class="article-full">
+       <header class="article-header">
+       <div class="featured-image">
+       <figure>
+         <img
+        src="images/donald-dump.jpg"
+        alt"mural of donald trump drawn as a emoji poop in soho">
+        <figcaption>
+         Photo by .....
+        </figcaption>
+      </figure>
+     </div>
+       <h2 class="articletitle">Article Title</h2>
+       </header>
+       <section class="article-text">
+       <h3
+       class="article-introduction">introduction</h3>
+       <p>Subways in NYC...Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <h3>subway lines</h3>
+      <p>Here are the lines of the subway:</p>
+   <ul>
+       <li>A</li>
+       <li>C</li>
+       <li>2</li>
+       <li>3</li>
+   </ul>
+
+      </section>
+      <section class="article-images">
+        <figure>
+          <img src="images/IMG_0019.JPG" alt="street art work done in dumbo">
+          <figcaption>Photo by Michael Centeno</figcaption>
+        </figure>
+      </section>
+      <section class="article-text">
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </section>
+
+  </article>
+
+</main>
+<p>&copy; Michael Centeno 2018 </p>
+<footer>
+
+</footer>
+</body>
 </html>
