--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav role="navigation">
             <ul>
               <li><a href="index.html">Home</a></li>
-              <li><a href="subways.html">subways</a></li>
+              <li><a href="subway.html">subway</a></li>
               <li><a href="parks.html">parks</a></li>
               <li><a href="about.html">about</a></li>
             </ul>
