fixing subway html

--- a/subway.html
+++ b/subway.html
@@ -25,13 +25,22 @@
 <main role="main">
    <article class="article-full">
        <header class="article-header">
-       <div class="featured-image"></div>
+       <div class="featured-image">
+       <figure>
+         <img
+       src="images/fiveptz.jpg"
+     alt="Image of a building with a lot of art all around the building">
+     <figcaption>
+       Photo by Ryan Hicks on flickr
+     </figcaption>
+   </figure>
+   </div>
        <h2 class="articletitle">Article Title</h2>
        </header>
        <section class="article-text">
        <h3
-       class="article-introduction">introduction</h3>
-       <p>The new york city subway is Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+       class="article-introduction">Introduction</h3>
+       <p>The New york city subway is... Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
          <h3>subway lines</h3>
          <p>Here are the lines of the subway:</p>
@@ -43,7 +52,14 @@
             </ul>
       </section>
       <section class="article-images">
-        <p>article images</p>
+      <figure>
+        <img
+        src="images/instagrambansky.jpg"
+        alt="image of kid with bubble on top of him">
+        <figcaption>
+Photo by Alejandra Quintero on flickr
+        </figcaption>
+      </figure>
       </section>
       <section class="article-text">
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
