--- a/parks.html
+++ b/parks.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>NYC Zine: Street art</title>
+    <title>NYC Zine: Parks</title>
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/typography.css">
 <link rel="stylesheet" href="css/nav.css"
@@ -25,15 +25,16 @@
     </nav>
   </header>
 
+
 <main role="main">
    <article class="article-full">
        <header class="article-header">
        <div class="featured-image">
-       <h2 class="articletitle">Home</h2>
+       <h2 class="articletitle">Parks</h2>
        </header>
        <section class="article-text">
        <h3
-       class="article-introduction">introduction</h3>
+       class="article-introduction">Parks in NYC</h3>
        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
        </section>
       <section class="article-images">
@@ -50,7 +51,6 @@
 <footer>
 <p>&copy; Michael Centeno 2018 </p>
 </footer>
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="javascript/script.js"
  charset="utf-8"></script>
