--- a/street art.html
+++ b/street art.html
@@ -7,7 +7,7 @@
     <title>NYC Zine: Subway</title>
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/typography.css">
-<link rel="stylesheet" href="css/nav.css"
+<link rel="stylesheet" href="css/nav.css">
 <link rel="stylesheet" href="css/style.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
@@ -18,7 +18,7 @@
     <nav role="navigation" id="main_nav">
             <ul>
               <li><a href="index.html">Home</a></li>
-              <li><a href="subway.html">subway</a></li>
+              <li><a href="street art.html">street art</a></li>
               <li><a href="parks.html">parks</a></li>
               <li><a href="about.html">about</a></li>
             </ul>
