--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>NYC Zine: Street art</title>
+    <title>NYC Street Art</title>
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/typography.css">
-<link rel="stylesheet" href="css/nav.css"
+<link rel="stylesheet" href="css/nav.css">
 <link rel="stylesheet" href="css/style.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
 <body>
   <header class="site-header">
-    <h1>NYC Zine</h1>
+    <h1>NYC Street Art</h1>
     <div class="menu"> <a href="#" id="menu_button">Menu</a> </div>
     <nav role="navigation" id="main_nav">
             <ul>
               <li><a href="index.html">Home</a></li>
-              <li><a href="subway.html">subway</a></li>
+              <li><a href="street art.html">street art</a></li>
               <li><a href="parks.html">parks</a></li>
               <li><a href="about.html">about</a></li>
             </ul>
@@ -29,6 +29,15 @@
    <article class="article-full">
        <header class="article-header">
        <div class="featured-image">
+         <figure>
+           <img
+           src="images/building.jpg"
+           alt="image of 5pointz with a lot of art all around the building"
+           <figcaption>
+          Photo by Pelle Sten on Flickr
+          </figcaption>
+         </figure>
+       </div>
        <h2 class="articletitle">Home</h2>
        </header>
        <section class="article-text">
