adding style to pages pictures and text

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="street art.html">street art</a></li>
-              <li><a href="parks.html">parks</a></li>
+              <li><a href="images.html">images</a></li>
               <li><a href="about.html">about</a></li>
             </ul>
     </nav>
@@ -42,8 +42,8 @@
        </header>
        <section class="article-text">
        <h3
-       class="article-introduction">introduction</h3>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+       class="article-introduction">Introduction</h3>
+       <p>In NYC, anywhere you go you see a lot of different street art. Many artists express themselves with the art that they do and there work always has meaning behind it. Many artists risk themselves for doing street art because in most places street art is not allowed that’s why most artist are remained anonymous. </p>
        </section>
       <section class="article-images">
         <p>article images</p>
