--- a/street art.html
+++ b/street art.html
@@ -19,7 +19,7 @@
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="street art.html">street art</a></li>
-              <li><a href="parks.html">parks</a></li>
+              <li><a href="images.html">images</a></li>
               <li><a href="about.html">about</a></li>
             </ul>
     </nav>
@@ -33,13 +33,15 @@
        <figure>
          <img
        src="images/fiveptz.jpg"
-     alt="Image of a building with a lot of art all around the building">
+     alt="Image of a building with a lot of art all around the building"
+     >
+
      <figcaption>
        Photo by Ryan Hicks on flickr
      </figcaption>
    </figure>
    </div>
-       <h2 class="articletitle">Article Title</h2>
+       <h2 class="articletitle">The Meaning Behind Street Art</h2>
        </header>
        <section class="article-text">
        <h3
@@ -47,26 +49,26 @@
        <p>The New york city subway is... Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
          <h3>subway lines</h3>
-         <p>Here are the lines of the subway:</p>
-            <ul>
-                <li>A</li>
-                <li>C</li>
-                <li>2</li>
-                <li>3</li>
-            </ul>
+
       </section>
       <section class="article-images">
       <figure>
         <img
-        src="images/instagrambansky.jpg"
-        alt="image of kid with bubble on top of him">
+        src="images/dumbo.jpg"
+        alt="image of a super hero with a quote">
         <figcaption>
-Photo by Alejandra Quintero on flickr
+Photo by Michael Centeno
         </figcaption>
       </figure>
       </section>
       <section class="article-text">
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </section>
+
+
+      <section class="article-text">
+<p><img src="Images/building.jpg" alt="building" style="width:300px;height:300px;margin-right:15px;">
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.</p>
       </section>
 
   </article>
