--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="street art.html">street art</a></li>
-              <li><a href="parks.html">parks</a></li>
+              <li><a href="images.html">images</a></li>
               <li><a href="about.html">about</a></li>
             </ul>
     </nav>
@@ -35,14 +35,60 @@
        <section class="article-text">
        <h3
        class="article-introduction">About this site</h3>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+       <p>New York City has a lot street around all five boroughs but many artists stay anonymous because they put their artwork where it’s not legal too. Many artists are popular and well known but people don’t even know how they look like because they like keeping themselves unknown and out of trouble for example a famous artist that is well known but no one has a clue how he looks like is Banksy. Most artist do their artwork at night because it’s harder for people to see them and not many people are around so they don’t have to worry about getting caught because if you get caught doing any type of street where you’re not supposed to you will get taken in and face jail time. This why many artists stay anonymous so they won’t get in trouble but they still want to express themselves with the art that they do and this site shows you what many artist do in New York City.</p>
        </section>
+
       <section class="article-images">
-        <p>article images</p>
+        <p></p>
       </section>
-      <section class="article-text">
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </section>
+
+      <style>
+* {
+    box-sizing: border-box;
+}
+
+.img-container {
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+}
+
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+</style>
+</head>
+<body>
+
+
+
+<div class="clearfix">
+  <div class="img-container">
+    <img src="images/building.jpg" alt="building" style="width:100%">
+  </div>
+  <div class="img-container">
+    <img src="images/fiveptz.jpg" alt="building with art" style="width:100%">
+  </div>
+  <div class="img-container">
+    <img src="images/dumbo.jpg" alt="superhero" style="width:100%">
+  </div>
+</div>
+
+<div class="clearfix">
+  <div class="img-container">
+    <img src="images/fdny911.jpg" alt="fireman with US flag" style="width:100%">
+  </div>
+  <div class="img-container">
+    <img src="images/trump-dump.jpg" alt="Trump as a poop emoji" style="width:100%">
+  </div>
+  <div class="img-container">
+    <img src="images/jamison-lottering-unsplash.jpg" alt="mural of the twin towers with the US flag" style="width:100%">
+  </div>
+</div>
+
+
 
   </article>
 
