--- a/index.html
+++ b/index.html
@@ -77,16 +77,16 @@ display: table;
 
 <div class="clearfix">
 <div class="img-container">
-<img src="images/fdny911.jpg" alt="" style="width:100%">
+<img src="images/fdny911.jpg" alt="firefighter on his knee over the US flag remembering 911" style="width:100%">
 </div>
 <div class="img-container">
-<img src="images/fiveptz.jpg" alt="building with art" style="width:100%">
+<img src="images/fiveptz.jpg" alt="building with art all over the building" style="width:100%">
 </div>
 <div class="img-container">
-<img src="images/trump-dump.jpg" alt="" style="width:100%">
+<img src="images/trump-dump.jpg" alt="mural of trump as a dump emoji" style="width:100%">
 </div>
 <div class="img-container">
-<img src="images/jamison-lottering-unsplash.jpg" alt="" style="width:100%">
+<img src="images/jamison-lottering-unsplash.jpg" alt="a mural of the twin towers, statue of liberty and US flag" style="width:100%">
 </div>
 </div>
 
@@ -122,10 +122,10 @@ display: table;
 
 <div class="clearfix">
 <div class="img-container">
-<img src="images/free-zohra.jpg" alt="" style="width:100%">
+<img src="images/free-zohra.jpg" alt="a mural of zhora drawn behind bars" style="width:100%">
 </div>
 <div class="img-container">
-<img src="images/trump-dump.jpg" alt="building with art" style="width:100%">
+<img src="images/trump-dump.jpg" alt="a mural in soho of trump as a poop emoji" style="width:100%">
 </div>
 </body>
 </html>
