--- a/street art.html
+++ b/street art.html
@@ -30,51 +30,54 @@
    <article class="article-full">
        <header class="article-header">
           <h2 class="articletitle">The Meaning Behind Street Art</h2>
-       <div class="featured-image">
-       <figure>
-         <img
-       src="images/fiveptz.jpg"
-     alt="Image of a building with a lot of art all around the building"
-     >
-
-     <figcaption>
-       Photo by Ryan Hicks on flickr
-     </figcaption>
-   </figure>
-   </div>
        </header>
-       <section class="article-text">
-       <h3
-       class="article-introduction">Introduction</h3>
-       <p>The New york city subway is... Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-         <h3>subway lines</h3>
 
-      </section>
-      <section class="article-images">
-      <figure>
-        <img
-        src="images/dumbo.jpg"
-        alt="image of a super hero with a quote">
+
+      <section class="article-text">
         <figcaption>
-Photo by Michael Centeno
+          Photo by Pelle Sten on Flickr
         </figcaption>
-      </figure>
-      </section>
-      <section class="article-text">
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p><img src="Images/building.jpg" alt="building with a lot of art all over the building " style="width:300px;height:300px;margin-right:15px;">
+This factory building that used to be found in Long island city it's exterior and interior used to be covered with a lot street art this building became famous worldwide because of it's art on the walls. A lot of artist from all over the world would come to this building just so they could do there art in this building it got it's name 5 pointz because of graffiti artist Jonathan Cohen he used it as a moniker to bring all the five boroughs of NYC together.</p>
       </section>
 
+      <section class="article-text">
+        <figcaption>
+          Photo by Bobby Zucco on Flickr
+        </figcaption>
+<p><img src="Images/trump-dump.jpg" alt="trump as a poop emoji" style="width:300px;height:300px;margin-right:15px;">
+This Mural of Donald trump drawn as feces made by the artist Hanksy it was drawn on August 2015 when Trump was running for predencity. This mural shows that its anti trump and this mural went viral because it was still up in the elections season Hanksy drew this mural because he thought trump was a joke so he decided to draw this mural as joke wheich at the end of the day went viral. </p>
+      </section>
 
       <section class="article-text">
-<p><img src="Images/building.jpg" alt="building" style="width:300px;height:300px;margin-right:15px;">
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus. Mauris quis diam velit.</p>
+        <figcaption>
+          Photo by Piotr Jasinski
+        </figcaption>
+<p><img src="Images/free-zohra.jpg" alt="mural of Zhora behind bars" style="width:300px;height:300px;margin-right:15px;">
+This mural was drawn by the famous artist Banksy he drew this to pay tribute to jailed turkish artist Zehra Dogan he drew this to protest over the imprisonment of Zehra Dogan because she's a journalist and a artist and she was serving jail time for three years because one of her paintings she did. Zehra Dogan got arrested because she posted a watercolor showing the rubble of the Kurdish town on Nusaybin destroyed by the turkish army in 2015. The reason Banksy drew this mural was because he feel for Zehra because he feels like he has drawn worse stuff then what she did and it's not fair that she got arrested.</p>
+      </section>
+
+      <section class="article-text">
+        <figcaption>
+          Photo by Michael Centeno
+        </figcaption>
+<p><img src="Images/dumbo.jpg" alt="drawn superhero with a quote over it " style="width:300px;height:300px;margin-right:15px;">
+This drawing in dumbo with a superhero and a quote that says "The society that separates its scholars from its warriors will have its thinking done by cowards and its fighting by fools." has many different interpretations one of those interpretations is that if a man doesn't appreciate the importance of knowledge and strength, he is condemed to be a coward or a fool. Another interpretation is the standard of justice depends on the equality of power to compel it. A lot of art has different interpretations that people have and this is one of them. </p>
+       </section>
+
+      <section class="article-text">
+        <figcaption>
+          Photo by Jamison Lottering
+<p><img src="Images/fdny911.jpg" alt="firefighter over the US flag remembering 911" style="width:300px;height:300px;margin-right:15px;">
+In this mural there's a background of the United states flag with a firefighter on his knee this mural represents of all the lives that were lost on nine eleven.</p>
       </section>
 
   </article>
 
 </main>
 <p>&copy; Michael Centeno 2018 </p>
+<p>Contact information: <a href="Michael.centeno1996@gmail.com"</a>Michael.centeno1996@gmail.com</p>
+</footer>
 <footer>
 
 </footer>
