--- a/images.html
+++ b/images.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>NYC Zine: images</title>
+    <title>NYC Street Art: images</title>
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/typography.css">
 <link rel="stylesheet" href="css/nav.css">
@@ -13,7 +13,7 @@
 </head>
 <body>
   <header class="site-header">
-    <h1>NYC Zine</h1>
+    <h1>NYC Street Art</h1>
     <div class="menu"> <a href="#" id="menu_button">Menu</a> </div>
     <nav role="navigation" id="main_nav">
             <ul>
@@ -30,26 +30,44 @@
    <article class="article-full">
        <header class="article-header">
        <div class="featured-image">
-       <h2 class="articletitle">images</h2>
+       <h2 class="articletitle">Images</h2>
        </header>
        <section class="article-text">
        <h3
-       class="article-introduction">Images in NYC</h3>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-       </section>
-      <section class="article-images">
-        <p>article images</p>
-      </section>
-      <section class="article-text">
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </section>
-
+       class="article-introduction">NYC Street Art</h3>
   </article>
+
+
+  <figure>
+    <img src="images/trump-dump.jpg" alt="trump as a poop emoji"/>
+    <figcaption>Photo by Bobby Zucco on Flickr </figcaption>
+</figure>
+<figure>
+    <img src="images/jamison-lottering-unsplash.jpg" alt="Mural of twin towers with statue of liberty"/>
+    <figcaption>Photo by Jamison Lottering on Unsplah</figcaption>
+</figure>
+<figure>
+    <img src="images/free-zohra.jpg" alt="mural of zohra behind bars"/>
+    <figcaption>Photo by Piotr Jasinski on Flickr</figcaption>
+</figure>
+<figure>
+    <img src="images/fdny911.jpg" alt="firefighter over the US flag remembering 911"/>
+    <figcaption>Photo by Jamison Lottering on Unsplash</figcaption>
+</figure>
+<figure>
+    <img src="images/dumbo.jpg" alt="Drawing of super hero with a quote over his head"/>
+    <figcaption>Photo by Michael Centeno </figcaption>
+</figure>
+<figure>
+    <img src="images/building.jpg" alt="building with a lot of street art all over the building "/>
+    <figcaption>Photo by Pelle Sten on Flickr </figcaption>
+</figure>
 
 </main>
 
 <footer>
 <p>&copy; Michael Centeno 2018 </p>
+<p>Contact information: <a href="Michael.centeno1996@gmail.com"</a>Michael.centeno1996@gmail.com</p>
 </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="javascript/script.js"
