--- a/street art.html
+++ b/street art.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>NYC Zine: Subway</title>
+    <title>NYC Street Art</title>
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/typography.css">
 <link rel="stylesheet" href="css/nav.css">
@@ -13,7 +13,7 @@
 </head>
 <body>
   <header class="site-header">
-    <h1>NYC Zine</h1>
+    <h1>NYC Street Art</h1>
     <div class="menu"> <a href="#" id="menu_button">Menu</a> </div>
     <nav role="navigation" id="main_nav">
             <ul>
@@ -51,7 +51,7 @@ This Mural of Donald trump drawn as feces made by the artist Hanksy it was drawn
 
       <section class="article-text">
         <figcaption>
-          Photo by Piotr Jasinski
+          Photo by Piotr Jasinski on Flickr
         </figcaption>
 <p><img src="Images/free-zohra.jpg" alt="mural of Zhora behind bars" style="width:300px;height:300px;margin-right:15px;">
 This mural was drawn by the famous artist Banksy he drew this to pay tribute to jailed turkish artist Zehra Dogan he drew this to protest over the imprisonment of Zehra Dogan because she's a journalist and a artist and she was serving jail time for three years because one of her paintings she did. Zehra Dogan got arrested because she posted a watercolor showing the rubble of the Kurdish town on Nusaybin destroyed by the turkish army in 2015. The reason Banksy drew this mural was because he feel for Zehra because he feels like he has drawn worse stuff then what she did and it's not fair that she got arrested.</p>
