--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <header class="site-header">
-    <h1>NYC Zine</h1>
+    <h1>NYC Street Art</h1>
     <div class="menu"> <a href="#" id="menu_button">Menu</a> </div>
     <nav role="navigation" id="main_nav">
             <ul>
