fizing small mistakes

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
     <img src="images/building.jpg" alt="building" style="width:100%">
   </div>
   <div class="img-container">
-    <img src="images/fiveptz.jpg" alt="building with art" style="width:100%">
+    <img src="images/free-zohra.jpg" alt="mural of zohra behind bars" style="width:100%">
   </div>
   <div class="img-container">
     <img src="images/dumbo.jpg" alt="superhero" style="width:100%">
@@ -96,6 +96,7 @@
 
 <footer>
 <p>&copy; Michael Centeno 2018 </p>
+<p>Contact information: <a href="Michael.centeno1996@gmail.com"</a>Michael.centeno1996@gmail.com</p>
 </footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="javascript/script.js"
