--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ display: table;
 <img src="images/fdny911.jpg" alt="firefighter on his knee over the US flag remembering 911" style="width:100%">
 </div>
 <div class="img-container">
-<img src="images/fiveptz.jpg" alt="building with art all over the building" style="width:100%">
+<img src="images/free-zohra.jpg" alt="mural of zohra behind bars" style="width:100%">
 </div>
 <div class="img-container">
 <img src="images/trump-dump.jpg" alt="mural of trump as a dump emoji" style="width:100%">
