--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>NYC Street Art</title>
-<link rel="stylesheet" href="css/normalize.css">
+<!-- <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/typography.css">
-<link rel="stylesheet" href="css/nav.css">
+<link rel="stylesheet" href="css/nav.css"> -->
 <link rel="stylesheet" href="css/style.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 </head>
