--- a/streetart.html
+++ b/streetart.html
@@ -34,10 +34,13 @@
 
 
       <section class="article-text">
-        <figcaption>
-          Photo by Pelle Sten on Flickr
-        </figcaption>
-<p><img src="Images/building.jpg" alt="building with a lot of art all over the building " style="width:300px;height:300px;margin-right:15px;">
+        <figure>
+          <img src="images/building.jpg" alt="building with a lot of art all over the building " style="width:300px;height:300px;margin-right:15px;">
+          <figcaption>
+            Photo by Pelle Sten on Flickr
+          </figcaption>
+        </figure>
+<p>
 This factory building that used to be found in Long island city it's exterior and interior used to be covered with a lot street art this building became famous worldwide because of it's art on the walls. A lot of artist from all over the world would come to this building just so they could do there art in this building it got it's name 5 pointz because of graffiti artist Jonathan Cohen he used it as a moniker to bring all the five boroughs of NYC together.</p>
       </section>
 
