--- a/streetart.html
+++ b/streetart.html
@@ -45,10 +45,14 @@ This factory building that used to be found in Long island city it's exterior an
       </section>
 
       <section class="article-text">
-        <figcaption>
-          Photo by Bobby Zucco on Flickr
-        </figcaption>
-<p><img src="Images/trump-dump.jpg" alt="trump as a poop emoji" style="width:300px;height:300px;margin-right:15px;">
+        <figure>
+           <img src="images/trump-dump.jpg" alt="trump as a poop emoji" style="width:300px;height:300px;margin-right:15px;">
+           <figcaption>
+             Photo by Bobby Zucco on Flickr
+           </figcaption>
+       </figure>
+
+<p>
 This Mural of Donald trump drawn as feces made by the artist Hanksy it was drawn on August 2015 when Trump was running for predencity. This mural shows that its anti trump and this mural went viral because it was still up in the elections season Hanksy drew this mural because he thought trump was a joke so he decided to draw this mural as joke wheich at the end of the day went viral. </p>
       </section>
 
