--- a/streetart.html
+++ b/streetart.html
@@ -68,7 +68,7 @@ This mural was drawn by the famous artist Banksy he drew this to pay tribute to 
 
       <section class="article-text">
         <figure>
-          <img src="images/dumbo.jpg" alt="drawn superhero with a quote over it " style="width:300px;height:300px;margin-right:15px;">
+          <img src="images/dumbo1.jpg" alt="drawn superhero with a quote over it " style="width:300px;height:300px;margin-right:15px;">
           <figcaption>
             Photo by Michael Centeno
           </figcaption>
