--- a/streetart.html
+++ b/streetart.html
@@ -34,7 +34,7 @@
 
 
       <section class="article-text">
-        <figure>
+        <figure class="inline-image">
           <img src="images/building.jpg" alt="building with a lot of art all over the building " style="width:300px;height:300px;margin-right:15px;">
           <figcaption>
             Photo by Pelle Sten on Flickr
