--- a/streetart.html
+++ b/streetart.html
@@ -45,7 +45,7 @@ This factory building that used to be found in Long island city it's exterior an
       </section>
 
       <section class="article-text">
-        <figure>
+        <figure class="inline-image">
            <img src="images/trump-dump.jpg" alt="trump as a poop emoji" style="width:300px;height:300px;margin-right:15px;">
            <figcaption>
              Photo by Bobby Zucco on Flickr
